--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -9,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
-	<script src="script.js" defer></script>
+	<script src="login.js" defer></script>
 </head>
 <body>
 <header>
@@ -23,18 +23,16 @@
 		</ul>
 	</nav>
 </header>
-<main>
-	<section id="login">
-		<h2>Log In</h2>
-		<form class="formulaire-login" action="#" method="post">
-			<label for="name">Email</label>
-			<input type="email" name="email" id="login">
-			<label for="email">Mot de passe</label>
-			<input type="password" name="password" id="password">
-			<input type="submit" value="Se connecter"> 
-		</form>
-        <p><a href="#">Mot de passe oublié</a></p>
-	</section>
+<main id="contact">
+	<h2>Log In</h2>
+	<form class="formulaire-login" action="#" method="post">
+		<label for="name">Email</label>
+		<input type="email" name="email" id="login">
+		<label for="email">Mot de passe</label>
+		<input type="password" name="password" id="password">
+		<input type="submit" value="Se connecter"> 
+		<a href="#">Mot de passe oublié</a>
+	</form>	
 </main>
 <footer>
 	<nav>
