--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -10,6 +10,7 @@
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
 	<script src="script.js" defer></script>
+	<script src="https://kit.fontawesome.com/efbfc747b8.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <header>
@@ -36,7 +37,18 @@
 		</article>
 	</section>
 	<section id="portfolio">
-		<h2>Mes Projets</h2>
+		<h2>Mes projets</h2>
+		 <!-- modale -->
+		<aside id="modal1" class="modal" aria-hidden="true" role="dialog" style="display:none;" aria-labelledby="titlemodal1">
+			<div class="modal-wrapper stop-modal">
+				<span><i class="fa-solid fa-xmark close-modal"></i></span>
+				<h3 id="titlemodal1">Galerie photo</h3>
+				<p>zdfzffdsfsfsfs</p>
+				<input type="submit" value="Ajouter une photo">
+				<p id="deleteGalerie">Supprimer la galerie</p>
+			</div>
+
+		</aside>
 		<div class="filters">
 		</div>
 		<div class="gallery">
