--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -26,9 +26,9 @@
 <main id="contact">
 	<h2>Log In</h2>
 	<form class="formulaire-login" action="#" method="post">
-		<label for="name">Email</label>
+		<label for="login">Email</label>
 		<input type="email" name="email" id="login">
-		<label for="email">Mot de passe</label>
+		<label for="password">Mot de passe</label>
 		<input type="password" name="password" id="password">
 		<input type="submit" value="Se connecter"> 
 		<a href="#">Mot de passe oublié</a>
