--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -50,16 +50,18 @@
 				<input type="submit" value="Ajouter une photo" id="add-picture">
 				<p id="deleteGalerie">Supprimer la galerie</p>
 			</div>
+			 <!-- 2eme modale ajout photo-->
 			<div class="js-modal-wrapper-add-picture stop-modal modal-wrapper" style="display:none;">
 				<div class="arrow-xmark">
-					<i class="fa-solid fa-arrow-left"></i>
+					<i class="fa-solid fa-arrow-left" id="return"></i>
 					<i class="fa-solid fa-xmark close-modal"></i>
 				</div>
 				<h3>Ajout photo</h3>
+				<!-- formulaire-->
 				<form action="#" method="post" class="bloc-add-pictures">
 					<div class="addpicture">
 						<i class="fa-regular fa-image"></i>
-						<label for="addpicture">+ Ajouter photo</label>
+						<label for="addpicture" id="labelAddpicture">+ Ajouter photo</label>
 						<input type="file" id="addpicture">
 						<img id="imagePreview" src="#" alt="Image Preview">
 						<p>jpg, png : 4mo max</p>
@@ -68,7 +70,7 @@
 					<input type="text" name="titre" id="titre">
 					<label class="label-form" for="categorie">Catégorie</label>
 					<select name="categorie" id="categorie">
-						<option value="" disabled selected hidden label="#"></option>
+						<option value="" disabled selected hidden label=" "></option>
 						<option value="1">Objets</option>
 						<option value="2">Appartements</option>
 						<option value="3">Hotels & restaurants</option>
