--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <header>
-	<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
+	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 	<nav>
 		<ul>
 			<li>projets</li>
@@ -50,14 +50,14 @@
 				<input type="submit" value="Ajouter une photo" id="add-picture">
 				<p id="deleteGalerie">Supprimer la galerie</p>
 			</div>
-			 <!-- 2eme modale ajout photo-->
+			 <!-- 2eme modale ajout du nouveau projet-->
 			<div class="js-modal-wrapper-add-picture stop-modal modal-wrapper" style="display:none;">
 				<div class="arrow-xmark">
 					<i class="fa-solid fa-arrow-left" id="return"></i>
 					<i class="fa-solid fa-xmark close-modal"></i>
 				</div>
 				<h3>Ajout photo</h3>
-				<!-- formulaire-->
+				<!-- formulaire ajout du nouveau projet-->
 				<form action="#" method="post" class="bloc-add-pictures">
 					<div class="addpicture">
 						<i class="fa-regular fa-image"></i>
